Added a few more links for the help popup in module creation.

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.152
+MODULE_VERSION: 0.153
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -441,23 +441,23 @@ TEXT: mod_unesco_oer_no_tooltip|Message to display if no Tooltip provided|Missin
 TEXT: mod_unesco_oer_tooltip_click|Message to display for clickable Tooltip|Click here for help.
 TEXT: mod_unesco_oer_tooltip_title|Message to display for field Tooltip|A name given to the resource
 TEXT: mod_unesco_oer_tooltip_alt_title_short|Message to display for field Tooltip|An alternative name for the resource
-TEXT: mod_unesco_oer_tooltip_alt_title_long|Message to display for field Tooltip|The distinction between titles and alternative titles is application-specific
+TEXT: mod_unesco_oer_tooltip_alt_title_long|Message to display for field Tooltip|An alternative name for the resource. The distinction between titles and alternative titles is application-specific
 TEXT: mod_unesco_oer_tooltip_creator_short|Message to display for field Tooltip|An entity primarily responsible for making the resource
-TEXT: mod_unesco_oer_tooltip_creator_long|Message to display for field Tooltip|Examples of a Creator include a person, an organization, or a service. Typically, the name of a Creator should be used to indicate the entity.
+TEXT: mod_unesco_oer_tooltip_creator_long|Message to display for field Tooltip|An entity primarily responsible for making the resource. Examples of a Creator include a person, an organization, or a service. Typically, the name of a Creator should be used to indicate the entity.
 TEXT: mod_unesco_oer_tooltip_subject_short|Message to display for field Tooltip|The topic of the resource.
-TEXT: mod_unesco_oer_tooltip_subject_long|Message to display for field Tooltip|Typically, the subject will be represented using keywords, key phrases, or classification codes.
+TEXT: mod_unesco_oer_tooltip_subject_long|Message to display for field Tooltip|The topic of the resource. Typically, the subject will be represented using keywords, key phrases, or classification codes.
 TEXT: mod_unesco_oer_tooltip_description_short|Message to display for field Tooltip|An account of the resource.
-TEXT: mod_unesco_oer_tooltip_description_long|Message to display for field Tooltip|Description may include but is not limited to: an abstract, a table of contents, a graphical representation, or a free-text account of the resource
+TEXT: mod_unesco_oer_tooltip_description_long|Message to display for field Tooltip|An account of the resource. Description may include but is not limited to: an abstract, a table of contents, a graphical representation, or a free-text account of the resource
 TEXT: mod_unesco_oer_tooltip_abstract|Message to display for field Tooltip|A summary of the resource.
 TEXT: mod_unesco_oer_tooltip_table_of_contents|Message to display for field Tooltip|A list of subunits of the resource.
 TEXT: mod_unesco_oer_tooltip_publisher|Message to display for field Tooltip|An entity responsible for making the resource available.
 TEXT: mod_unesco_oer_tooltip_contributor_short|Message to display for field Tooltip|An entity responsible for making contributions to the resource.
-TEXT: mod_unesco_oer_tooltip_contributor_long|Message to display for field Tooltip|(Refines term creator) Examples of a Contributor include a person, an organization, or a service. Typically, the name of a Contributor should be used to indicate the entity.
+TEXT: mod_unesco_oer_tooltip_contributor_long|Message to display for field Tooltip|An entity responsible for making contributions to the resource. (Refines term creator) Examples of a Contributor include a person, an organization, or a service. Typically, the name of a Contributor should be used to indicate the entity.
 TEXT: mod_unesco_oer_tooltip_date|Message to display for field Tooltip|A point or period of time associated with an event in the lifecycle of the resource.
 TEXT: mod_unesco_oer_tooltip_type_short|Message to display for field Tooltip|The nature or genre of the resource.
-TEXT: mod_unesco_oer_tooltip_type_long|Message to display for field Tooltip|To describe the file format, physical medium, or dimensions of the resource, use the Format element.
+TEXT: mod_unesco_oer_tooltip_type_long|Message to display for field Tooltip|The nature or genre of the resource. To describe the file format, physical medium, or dimensions of the resource, use the Format element.
 TEXT: mod_unesco_oer_tooltip_format_short|Message to display for field Tooltip|The file format, physical medium, or dimensions of the resource.
-TEXT: mod_unesco_oer_tooltip_format_long|Message to display for field Tooltip|Examples of dimensions include size and duration.
+TEXT: mod_unesco_oer_tooltip_format_long|Message to display for field Tooltip|The file format, physical medium, or dimensions of the resource. Examples of dimensions include size and duration.
 TEXT: mod_unesco_oer_tooltip_extent|Message to display for field Tooltip|The size or duration of the resource
 TEXT: mod_unesco_oer_tooltip_medium|Message to display for field Tooltip|The material or physical carrier of the resource.
 TEXT: mod_unesco_oer_tooltip_source|Message to display for field Tooltip|A related resource from which the described resource is derived.
@@ -473,7 +473,7 @@ TEXT: mod_unesco_oer_tooltip_coverage|Message to display for field Tooltip|The s
 TEXT: mod_unesco_oer_tooltip_spatial_coverage|Message to display for field Tooltip|Spatial characteristics of the resource.
 TEXT: mod_unesco_oer_tooltip_temporal_coverage|Message to display for field Tooltip|Temporal characteristics of the resource.
 TEXT: mod_unesco_oer_tooltip_rights_short|Message to display for field Tooltip|Information about rights held in and over the resource.
-TEXT: mod_unesco_oer_tooltip_rights_long|Message to display for field Tooltip|Typically, rights information includes a statement about various property rights associated with the resource, including intellectual property rights.
+TEXT: mod_unesco_oer_tooltip_rights_long|Message to display for field Tooltip|Information about rights held in and over the resource. Typically, rights information includes a statement about various property rights associated with the resource, including intellectual property rights.
 TEXT: mod_unesco_oer_tooltip_delivery_mode|Message to display for field Tooltip|This describes how this course will be taught , lectures, e-learning
 TEXT: mod_unesco_oer_tooltip_assessment|Message to display for field Tooltip|Assessment refers to how the outcomes of the course will be tested, this might include test, exams, assignments
 TEXT: mod_unesco_oer_tooltip_schedule_of_activities|Message to display for field Tooltip|Detailed outline of what is covered in the lectures or chapters of the course
