Tooltip support done, with a few bugs.

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -409,6 +409,9 @@ TEXT: mod_unesco_oer_module_mode|Heading for Module Content|Delivery Mode
 TEXT: mod_unesco_oer_module_no_of_hours|Heading for Module Content|Number of Hours
 TEXT: mod_unesco_oer_module_assessment|Heading for Module Content|Assessment
 TEXT: mod_unesco_oer_module_schedule_of_classes|Heading for Module Content|Schedule of Activities
+TEXT: mod_unesco_oer_module_associated_material|Heading for Module Content|Associated Material
+TEXT: mod_unesco_oer_module_comments_history|Heading for Module Content|Comments History
+TEXT: mod_unesco_oer_module_remark|Heading for Module Content|Remark
 
 TEXT: mod_unesco_oer_status|Status Heading|Published
 TEXT: mod_unesco_oer_status_disabled|Status Option|Disabled
@@ -481,6 +484,8 @@ TEXT: mod_unesco_oer_tooltip_number_of_hours|Message to display for field Toolti
 TEXT: mod_unesco_oer_tooltip_entry_requirements|Message to display for field Tooltip|The minimum requirements necessary to be accepted to the course
 TEXT: mod_unesco_oer_tooltip_rules_of_combination|Message to display for field Tooltip|What other courses can be taken with this course, which courses need to be completed before you start this course
 TEXT: mod_unesco_oer_tooltip_outcomes_objectives|Message to display for field Tooltip|The outcomes and objectives  of the course
-TEXT: mod_unesco_oer_tooltip_comments_history |Message to display for field Tooltip|Notes on the changes that have been made to product
+TEXT: mod_unesco_oer_tooltip_comments_history|Message to display for field Tooltip|Notes on the changes that have been made to product
+TEXT: mod_unesco_oer_tooltip_module_level|Message to display for field Tooltip|The year in which the module is taught
+TEXT: mod_unesco_oer_tooltip_remark|Message to display for field Tooltip|Reason for creating adaptation
 
 TEXT: mod_unesco_oer_help_missing|Error message for missing help information|Missing help information!
