Added accreditation data

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -185,6 +185,14 @@ TEXT: mod_unesco_oer_description_info|Heading for product data entry table|Descr
 TEXT: mod_unesco_oer_legal_info|Heading for product data entry table|Legal Information
 TEXT: mod_unesco_oer_year|Heading for product data entry table|Year
 
+TEXT: mod_unesco_oer_accreditation|Heading for product data entry table|Accreditation
+TEXT: mod_unesco_oer_accreditation_is|Heading for product data entry table|Is product accredited?
+TEXT: mod_unesco_oer_accreditation_body|Heading for product data entry table|Accreditation Body
+TEXT: mod_unesco_oer_accreditation_date|Heading for product data entry table|Accreditation Date
+
+TEXT: mod_unesco_oer_yes|Heading for product data entry table|Yes
+TEXT: mod_unesco_oer_no|Heading for product data entry table|No
+
 TEXT: mod_unesco_oer_adaptation_region|Heading for product data entry table|Region
 TEXT: mod_unesco_oer_adaptation_country|Heading for product data entry table|Country
 TEXT: mod_unesco_oer_adaptation_group|Heading for product data entry table|Group
