added permission controls

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.154
+MODULE_VERSION: 0.155
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -497,3 +497,4 @@ TEXT: mod_unesco_oer_tooltip_module_level|Message to display for field Tooltip|T
 TEXT: mod_unesco_oer_tooltip_remark|Message to display for field Tooltip|Reason for creating adaptation
 
 TEXT: mod_unesco_oer_help_missing|Error message for missing help information|Missing help information!
+TEXT: mod_unesco_accessdenied|Access denied|Access denied
