--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.155
+MODULE_VERSION: 0.156
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -202,6 +202,7 @@ TEXT: mod_unesco_oer_comment_heading|Heading for product comment entry template|
 TEXT: mod_unesco_oer_comment_input|Heading for product comment entry input|Type comment
 
 TEXT: mod_unesco_oer_group_heading|Heading for group entry template|Create Group
+TEXT: mod_unesco_oer_group_tools|Heading for group entry template|Group Tools
 TEXT: mod_unesco_oer_group_users|Heading for group entry template|Group users
 TEXT: mod_unesco_oer_group_name|Heading for group name input|Group Name
 TEXT: mod_unesco_oer_group_latitude|Heading for group latitued input|Latitude
