--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -143,6 +143,7 @@ TEXT: mod_unesco_oer_add_data_status|Heading for add data table|Status
 TEXT: mod_unesco_oer_add_data_statusBtn|Heading for add data table|Add Status
 
 TEXT: mod_unesco_oer_product_upload_heading|Heading for product data entry template|Create New Product
+TEXT: mod_unesco_oer_product_filter_criteria|Heading for product data entry template|Product Matches Filter Criteria
 TEXT: mod_unesco_oer_product_upload_edit_heading|Heading for product data entry template|Edit Product
 TEXT: mod_unesco_oer_product_upload_button|Button caption|Save
 TEXT: mod_unesco_oer_product_cancel_button|Button caption|Cancel
