--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.156
+MODULE_VERSION: 0.157
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -262,10 +262,12 @@ TEXT: mod_unesco_oer_group_file_upload_button|fileUpload Button|File Manager
 TEXT: mod_unesco_oer_add_resource_heading|heading for adding a group resource|Add OER
 TEXT: mod_unesco_oer_group_resources|heading group resource|Group resources
 TEXT: mod_unesco_oer_sub_group_name|heading subgroup|Subgroup name
+
 TEXT: mod_unesco_oer_sub_group_message1|enter subgroup|Please enter your subgroup name
 TEXT: mod_unesco_oer_sub_group_description|heading subgroup descrption|Descrption
 TEXT: mod_unesco_oer_sub_group_oer_resource|heading subgroup oer resource|OER resources
-TEXT: mod_unesco_oer_sub_group_create|heading create subgroup descrption|Subgroup
+TEXT: mod_unesco_oer_sub_group|heading create subgroup descrption|Subgroup
+TEXT: mod_unesco_oer_sub_group_create|heading create subgroup descrption| Create Subgroup
 TEXT: mod_unesco_oer_group_interest|heading interests|Interests
 
 
@@ -449,6 +451,7 @@ TEXT: mod_unesco_oer_user_comment| featured  | User Comment:
 TEXT: mod_unesco_oer_browse_map| featured  | Browse Adaptation by Map
 TEXT: mod_unesco_oer_region|featured| Region
 TEXT: mod_unesco_oer_Country| featured  | Country
+TEXT: mod_unesco_oer_website| featured  | Website
 
 TEXT: mod_unesco_oer_no_tooltip|Message to display if no Tooltip provided|Missing Tooltip!
 TEXT: mod_unesco_oer_tooltip_click|Message to display for clickable Tooltip|Click here for help.
@@ -500,3 +503,10 @@ TEXT: mod_unesco_oer_tooltip_remark|Message to display for field Tooltip|Reason 
 
 TEXT: mod_unesco_oer_help_missing|Error message for missing help information|Missing help information!
 TEXT: mod_unesco_accessdenied|Access denied|Access denied
+
+TEXT: mod_unesco_oer_manage_resource|Access denied|Manage OER Resource
+TEXT: mod_unesco_oer_add_resource|Access denied|Add OER Resource
+TEXT: mod_unesco_oer_latest_discussion|Access denied|Latest Discussion
+TEXT: mod_unesco_oer_all_discussion|Access denied|All Discussions
+TEXT: mod_unesco_oer_resource|Access denied|OER Resource
+TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
