--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -423,7 +423,7 @@ TEXT: mod_unesco_oer_module_assessment|Heading for Module Content|Assessment
 TEXT: mod_unesco_oer_module_schedule_of_classes|Heading for Module Content|Schedule of Activities
 TEXT: mod_unesco_oer_module_associated_material|Heading for Module Content|Associated Material
 TEXT: mod_unesco_oer_module_comments_history|Heading for Module Content|Comments History
-TEXT: mod_unesco_oer_module_remark|Heading for Module Content|Remark
+TEXT: mod_unesco_oer_module_remark|Heading for Module Content|Comments History
 
 TEXT: mod_unesco_oer_status|Status Heading|Published
 TEXT: mod_unesco_oer_status_disabled|Status Option|Disabled
