--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.157
+MODULE_VERSION: 0.158
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -510,3 +510,6 @@ TEXT: mod_unesco_oer_latest_discussion|Access denied|Latest Discussion
 TEXT: mod_unesco_oer_all_discussion|Access denied|All Discussions
 TEXT: mod_unesco_oer_resource|Access denied|OER Resource
 TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
+
+TEXT: mod_unesco_oer_select_adaptation|Adapt section heading|Select Adaptation
+TEXT: mod_unesco_oer_select_group|Adapt section heading|Select Group
