added register link

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.158
+MODULE_VERSION: 0.159
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -513,3 +513,4 @@ TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
 
 TEXT: mod_unesco_oer_select_adaptation|Adapt section heading|Select Adaptation
 TEXT: mod_unesco_oer_select_group|Adapt section heading|Select Group
+TEXT: mod_unesco_oer_register|Register|Register
