updated theme to match templates

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.159
+MODULE_VERSION: 0.160
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -88,6 +88,7 @@ TEXT: mod_unesco_oer_licencinginfo|Licencing info|Choose you licencing option. C
 TEXT: mod_unesco_oer_reportbugs|Report Problem|Report Problem
 TEXT: mod_unesco_oer_loggedinas|Logged in as|Logged in as
 TEXT: mod_unesco_oer_welcome|Welcome|Welcome
+TEXT: mod_unesco_oer_hello|Hello|Hello
 TEXT: mod_unesco_oer_login|Log In|Log In
 TEXT: mod_unesco_oer_logout|Log Out|Log Out
 TEXT: mod_unesco_oer_productadaptationstitle|PRODUCT ADAPTATIONS|PRODUCT ADAPTATIONS
