Fixed pages 5b and 3c to delete product sections

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -426,6 +426,8 @@ TEXT: mod_unesco_oer_module_associated_material|Heading for Module Content|Assoc
 TEXT: mod_unesco_oer_module_comments_history|Heading for Module Content|Comments History
 TEXT: mod_unesco_oer_module_remark|Heading for Module Content|Comments History
 
+TEXT: mod_unesco_oer_sections_delete|Delete Link Title|Delete Section
+
 TEXT: mod_unesco_oer_status|Status Heading|Published
 TEXT: mod_unesco_oer_status_disabled|Status Option|Disabled
 TEXT: mod_unesco_oer_status_draft|Status Option|Draft
