--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -384,7 +384,7 @@ TEXT: mod_unesco_oer_product_type_delete_confirm|Confirmation message for deleti
 TEXT: mod_unesco_oer_product_language_delete_confirm|Confirmation message for deleting product language|Are you sure you want to delete this Language?
 TEXT: mod_unesco_oer_institution_delete_confirm|Confirmation message for deleting an institution|Are you sure you want to delete this institution?
 TEXT: mod_unesco_oer_products|Products heading|Unesco OER Products
-TEXT: mod_unesco_oer_product_new_adaptation|Create new Adaptation|Make a new adaptation using this UNESCO Product
+TEXT: mod_unesco_oer_product_new_adaptation|Create new Adaptation|Make a new adaptation using this adaptation
 TEXT: mod_unesco_oer_products_edit_metadata|link title|Edit Metadata
 TEXT: mod_unesco_oer_products_delete|Delete Link Title|Delete Product
 TEXT: mod_unesco_oer_products_make_featured|featured product link|Make Featured Product
