updated most rated

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.160
+MODULE_VERSION: 0.161
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -443,9 +443,9 @@ TEXT: mod_unesco_oer_List| List view | List
 TEXT: mod_unesco_oer_adaptations| adapations | Adaptations
 TEXT: mod_unesco_oer_no_featured| adapations | No featured product selected
 TEXT: mod_unesco_oer_see_all_adaptations| adapations | See all Adaptations
-TEXT: mod_unesco_oer_rated| Rated | Rated
-TEXT: mod_unesco_oer_adapted| adapted | Adapted
-TEXT: mod_unesco_oer_Comments| Comments | Comments
+TEXT: mod_unesco_oer_rated| Rated | RATED
+TEXT: mod_unesco_oer_adapted| adapted | ADAPTED
+TEXT: mod_unesco_oer_Comments| Comments | COMMENTED
 TEXT: mod_unesco_oer_most|  | Most...
 TEXT: mod_unesco_oer_featured| featured  | Featured Unesco OER Products
 TEXT: mod_unesco_oer_featured_adaptation| featured  | Featured Adaptation
