--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.161
+MODULE_VERSION: 0.162
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -385,6 +385,7 @@ TEXT: mod_unesco_oer_product_language_delete_confirm|Confirmation message for de
 TEXT: mod_unesco_oer_institution_delete_confirm|Confirmation message for deleting an institution|Are you sure you want to delete this institution?
 TEXT: mod_unesco_oer_products|Products heading|Unesco OER Products
 TEXT: mod_unesco_oer_product_new_adaptation|Create new Adaptation|Make a new adaptation using this adaptation
+TEXT: mod_unesco_oer_product_make_adaptation|Create new Adaptation|Make adaptation
 TEXT: mod_unesco_oer_products_edit_metadata|link title|Edit Metadata
 TEXT: mod_unesco_oer_products_delete|Delete Link Title|Delete Product
 TEXT: mod_unesco_oer_products_make_featured|featured product link|Make Featured Product
@@ -435,6 +436,7 @@ TEXT: mod_unesco_oer_status_published|Status Option|Published
 
 TEXT: mod_unesco_oer_contentmanager_|Content Class Error Message|Nothing to show!
 TEXT: mod_unesco_oer_bookmark_add| add bookmark message| Add Bookmark
+TEXT: mod_unesco_oer_bookmark| add bookmark message|Bookmark
 TEXT: mod_unesco_oer_bookmark_delete| add bookmark message| Delete 
 TEXT: mod_unesco_oer_bookmark_edit| add bookmark message| Edit 
 TEXT: mod_unesco_oer_bookmark_cancel| cancel bookmark message| Cancel 
