changed filter button appearance

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.162
+MODULE_VERSION: 0.163
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -324,6 +324,9 @@ TEXT: mod_unesco_oer_reset|Reset heading |Reset
 TEXT: mod_unesco_oer_submit|Submit heading |SUBMIT
 TEXT: mod_unesco_oer_save|Save heading |Save
 TEXT: mod_unesco_oer_done|Done heading |Done
+TEXT: mod_unesco_oer_search|Search heading |Search
+TEXT: mod_unesco_oer_reset_2|Reset heading |RESET
+TEXT: mod_unesco_oer_search_2|Search heading |SEARCH
 
 TEXT: mod_unesco_oer_additional_language_heading|Heading for additional language entry template|Create new Language
 TEXT: mod_unesco_oer_additional_language_name|Heading for additional language name input|Choose language name:
