fixed some language elements

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.163
+MODULE_VERSION: 0.164
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -186,6 +186,8 @@ TEXT: mod_unesco_oer_creator_info|Heading for product data entry table|Creators 
 TEXT: mod_unesco_oer_description_info|Heading for product data entry table|Description Information
 TEXT: mod_unesco_oer_legal_info|Heading for product data entry table|Legal Information
 TEXT: mod_unesco_oer_year|Heading for product data entry table|Year
+TEXT: mod_unesco_oer_adaptation_notification|message for product data entry table|This is an ADAPTATION
+TEXT: mod_unesco_oer_required_notification|message for product data entry table|indicates fields that are required. 
 
 TEXT: mod_unesco_oer_accreditation|Heading for product data entry table|Accreditation
 TEXT: mod_unesco_oer_accreditation_is|Heading for product data entry table|Is product accredited?
@@ -520,5 +522,7 @@ TEXT: mod_unesco_oer_resource|Access denied|OER Resource
 TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
 
 TEXT: mod_unesco_oer_select_adaptation|Adapt section heading|Select Adaptation
+TEXT: mod_unesco_oer_adapt_section|Adapt section heading|Adapt Section
 TEXT: mod_unesco_oer_select_group|Adapt section heading|Select Group
 TEXT: mod_unesco_oer_register|Register|Register
+TEXT: mod_unesco_oer_print|Print|Print
