--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.164
+MODULE_VERSION: 0.165
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -526,3 +526,28 @@ TEXT: mod_unesco_oer_adapt_section|Adapt section heading|Adapt Section
 TEXT: mod_unesco_oer_select_group|Adapt section heading|Select Group
 TEXT: mod_unesco_oer_register|Register|Register
 TEXT: mod_unesco_oer_print|Print|Print
+
+TEXT: mod_unesco_oer_reporting_tool|Reporting|Reporting Tool
+TEXT: mod_unesco_oer_general|Reporting|General
+TEXT: mod_unesco_oer_property|Reporting|Property
+TEXT: mod_unesco_oer_value|Reporting|Value
+TEXT: mod_unesco_oer_total|Reporting|Total
+TEXT: mod_unesco_oer_reporting_multiple_criteria|ADAPTATIONS BY MULTIPLE CRITERIA
+TEXT: mod_unesco_oer_reporting_charts|Reporting|CHARTS
+TEXT: mod_unesco_oer_reporting_general|Reporting|GENERAL
+TEXT: mod_unesco_oer_lang_breakdown|Reporting|Language breakdown - originals
+TEXT: mod_unesco_oer_unesco_ori|Reporting|Number of UNESCO Originals
+TEXT: mod_unesco_oer_unesco_adapt|Reporting|Number of adaptations
+TEXT: mod_unesco_oer_unesco_ori1|Reporting|Number of languages in UNESCO Originals
+TEXT: mod_unesco_oer_unesco_adapt1|Reporting|Number of languages in adaptations
+TEXT: mod_unesco_oer_type_ori|Reporting|Type of original
+TEXT: mod_unesco_oer_type_adapt|Reporting|Type of adaptation
+TEXT: mod_unesco_oer_county_adapt|Reporting|Country of adaptation
+TEXT: mod_unesco_oer_type_ori|Reporting|Breakdown by type - originals
+TEXT: mod_unesco_oer_lang_adapt|Reporting|Language breakdown - adaptations
+TEXT: mod_unesco_oer_type_adapt1|Reporting|Breakdown by type - adaptations
+TEXT: mod_unesco_oer_type_adapt2|Reporting|Breakdown by type - institutions
+TEXT: mod_unesco_oer_type_adapt3|Reporting|Breakdown by region - adaptations
+TEXT: mod_unesco_oer_type_adapt4|Reporting|Breakdown by country - adaptations
+TEXT: mod_unesco_oer_ctrl|Reporting|Use CTRL button to select more than one country 
+
