--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -532,7 +532,7 @@ TEXT: mod_unesco_oer_general|Reporting|General
 TEXT: mod_unesco_oer_property|Reporting|Property
 TEXT: mod_unesco_oer_value|Reporting|Value
 TEXT: mod_unesco_oer_total|Reporting|Total
-TEXT: mod_unesco_oer_reporting_multiple_criteria|ADAPTATIONS BY MULTIPLE CRITERIA
+TEXT: mod_unesco_oer_reporting_multiple_criteria|Reporting|ADAPTATIONS BY MULTIPLE CRITERIA
 TEXT: mod_unesco_oer_reporting_charts|Reporting|CHARTS
 TEXT: mod_unesco_oer_reporting_general|Reporting|GENERAL
 TEXT: mod_unesco_oer_lang_breakdown|Reporting|Language breakdown - originals
