--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.166
+MODULE_VERSION: 0.167
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -134,6 +134,7 @@ TEXT: mod_unesco_oer_add_data_newFeaturedAdaptationBtn|Button for add data table
 TEXT: mod_unesco_oer_add_data_newGroupBtn|Button for add data table|Create Group
 TEXT: mod_unesco_oer_add_data_newInstitutionBtn|Button for add data table|Save
 TEXT: mod_unesco_oer_add_data_newInstitutionTypeBtn|Button for add data table|Create Institution Type
+TEXT: mod_unesco_oer_add_data_createinstitution|Button for add data table|Create Institution
 TEXT: mod_unesco_oer_add_data_newcommentBtn|Heading for add data table|Add Comment
 TEXT: mod_unesco_oer_add_data_addratingBtn|Button to rate a product|Rate Product
 TEXT: mod_unesco_oer_add_data_homeBtn|Heading for add data table|Home
@@ -242,6 +243,7 @@ TEXT: mod_unesco_oer_group_cancel_button|Heading for button cancel|Cancel
 TEXT: mod_unesco_oer_group_save_button|Heading for button save|Save
 TEXT: mod_unesco_oer_group_update_details_button|Heading for button update|Update details
 TEXT: mod_unesco_oer_group_legend_groups|Heading for groups legend|Groups
+TEXT: mod_unesco_oer_group_groups_grid|Heading for groups legend|Groups Grid
 TEXT: mod_unesco_oer_group_number_of_group_user|Heading for no of groups users|Users
 TEXT: mod_unesco_oer_group_join|Heading for join groups|Join group
 TEXT: mod_unesco_oer_group_leave|Heading for join groups|Leave Group
@@ -380,6 +382,7 @@ TEXT: mod_unesco_oer_users_description|Title for a user description|Description
 TEXT: mod_unesco_oer_users_work_phone|Title for a user work phone|Work Phone
 TEXT: mod_unesco_oer_users_website_link|Title for a user website link|Website link
 TEXT: mod_unesco_oer_users_group_membership|Title for a user group membership|Group membership
+TEXT: mod_unesco_oer_users_group_member|Title for a user group membership|Member
 TEXT: mod_unesco_oer_users_complete_registration|Heading for button  complete registration|Complete Registration
 
 TEXT:mod_unesco_oer_comments_hide|hide comments| Hide Comments
@@ -447,6 +450,7 @@ TEXT: mod_unesco_oer_bookmark_edit| add bookmark message| Edit
 TEXT: mod_unesco_oer_bookmark_cancel| cancel bookmark message| Cancel 
 TEXT: mod_unesco_oer_grid| grid view | Grid
 TEXT: mod_unesco_oer_List| List view | List
+TEXT: mod_unesco_oer_view_as| List view | View As
 TEXT: mod_unesco_oer_adaptations| adapations | Adaptations
 TEXT: mod_unesco_oer_no_featured| adapations | No featured product selected
 TEXT: mod_unesco_oer_see_all_adaptations| adapations | See all Adaptations
@@ -517,6 +521,7 @@ TEXT: mod_unesco_accessdenied|Access denied|Access denied
 TEXT: mod_unesco_oer_manage_resource|Access denied|Manage OER Resource
 TEXT: mod_unesco_oer_add_resource|Access denied|Add OER Resource
 TEXT: mod_unesco_oer_latest_discussion|Access denied|Latest Discussion
+TEXT: mod_unesco_oer_discussion|Access denied| Discussion
 TEXT: mod_unesco_oer_all_discussion|Access denied|All Discussions
 TEXT: mod_unesco_oer_resource|Access denied|OER Resource
 TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
