--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.167
+MODULE_VERSION: 0.168
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -554,5 +554,7 @@ TEXT: mod_unesco_oer_type_adapt1|Reporting|Breakdown by type - adaptations
 TEXT: mod_unesco_oer_type_adapt2|Reporting|Breakdown by type - institutions
 TEXT: mod_unesco_oer_type_adapt3|Reporting|Breakdown by region - adaptations
 TEXT: mod_unesco_oer_type_adapt4|Reporting|Breakdown by country - adaptations
-TEXT: mod_unesco_oer_ctrl|Reporting|Use CTRL button to select more than one country 
+TEXT: mod_unesco_oer_ctrl|Reporting|Use CTRL button to select more than one country
+TEXT: mod_unesco_ori_adapt|Reporting|Originals vs Adaptations 
+TEXT: mod_unesco_ori_adapt1|Reporting|Originals & Adaptations - Evolution
 
