fixed some language elements

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -531,6 +531,20 @@ TEXT: mod_unesco_oer_adapt_section|Adapt section heading|Adapt Section
 TEXT: mod_unesco_oer_select_group|Adapt section heading|Select Group
 TEXT: mod_unesco_oer_register|Register|Register
 TEXT: mod_unesco_oer_print|Print|Print
+TEXT: mod_unesco_oer_compare|compare|Compare
+TEXT: mod_unesco_oer_compare_selected|compare|Compare Selected
+TEXT: mod_unesco_oer_view_product|View full product|View full product
+TEXT: mod_unesco_oer_managed_by|Managed by|Managed by
+TEXT: mod_unesco_oer_view_group|View group|View group
+TEXT: mod_unesco_oer_make_new_adaptation|New adaptation link|Make a new adaptation using this UNESCO Product
+TEXT: mod_unesco_oer_edit_adaptation|Edit Adaptation|Edit Adaptation
+TEXT: mod_unesco_oer_edit_product|Edit Product|Edit Product
+TEXT: mod_unesco_oer_new_product|New Product|New Product
+
+TEXT: mod_unesco_oer_compare_tools|Heading for compare tab|Compare Tools
+TEXT: mod_unesco_oer_compare_select_instruction|instruction for compare tab|Select/unselect item(s) from the list below or use the search to find section (courses):
+TEXT: mod_unesco_oer_compare_add_adaptation|Heading for compare tab|Add to adaptation
+TEXT: mod_unesco_oer_compare_clear|Heading for compare tab|Clear selection
 
 TEXT: mod_unesco_oer_reporting_tool|Reporting|Reporting Tool
 TEXT: mod_unesco_oer_general|Reporting|General
