--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.168
+MODULE_VERSION: 0.169
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -537,6 +537,7 @@ TEXT: mod_unesco_oer_view_product|View full product|View full product
 TEXT: mod_unesco_oer_managed_by|Managed by|Managed by
 TEXT: mod_unesco_oer_view_group|View group|View group
 TEXT: mod_unesco_oer_make_new_adaptation|New adaptation link|Make a new adaptation using this UNESCO Product
+TEXT: mod_unesco_oer_make_new_adaptation2|New adaptation link|Make a new adaptation using this Adaption
 TEXT: mod_unesco_oer_edit_adaptation|Edit Adaptation|Edit Adaptation
 TEXT: mod_unesco_oer_edit_product|Edit Product|Edit Product
 TEXT: mod_unesco_oer_new_product|New Product|New Product
