--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.169
+MODULE_VERSION: 0.170
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -572,4 +572,19 @@ TEXT: mod_unesco_oer_type_adapt4|Reporting|Breakdown by country - adaptations
 TEXT: mod_unesco_oer_ctrl|Reporting|Use CTRL button to select more than one country
 TEXT: mod_unesco_ori_adapt|Reporting|Originals vs Adaptations 
 TEXT: mod_unesco_ori_adapt1|Reporting|Originals & Adaptations - Evolution
-
+TEXT: mod_unesco_oer_ctrl1|Reporting|Use CTRL button to select more than one region
+TEXT: mod_unesco_oer_ctrl2|Reporting|Use CTRL button to select more than one theme
+TEXT: mod_unesco_oer_ctrl3|Reporting|Use CTRL button to select more than one keyword
+TEXT: mod_unesco_oer_ctrl4|Reporting|Use CTRL button to select more than one language
+TEXT: mod_unesco_oer_country_region|Reporting|Country and region
+TEXT: mod_unesco_oer_reporting_select|Reporting|Select Country
+TEXT: mod_unesco_oer_reporting_select1|Reporting|Select Region
+TEXT: mod_unesco_oer_reporting_select2|Reporting|UNESCO Theme
+TEXT: mod_unesco_oer_reporting_select3|Reporting|UNESCO Keyword
+TEXT: mod_unesco_oer_reporting_title|Reporting|Theme/Keywords
+TEXT: mod_unesco_oer_reporting_title1|Reporting|Adaptation Type
+TEXT: mod_unesco_oer_reporting_title2|Reporting|Adapted By Institution Type
+TEXT: mod_unesco_oer_reporting_title3|Reporting|Output
+TEXT: mod_unesco_oer_reporting_title4|Reporting|Report Format
+TEXT: mod_unesco_oer_reporting_button|Reporting|Generate Report
+TEXT: mod_unesco_oer_reporting_button1|Reporting|Reset
