--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -246,6 +246,7 @@ TEXT: mod_unesco_oer_group_legend_groups|Heading for groups legend|Groups
 TEXT: mod_unesco_oer_group_groups_grid|Heading for groups legend|Groups Grid
 TEXT: mod_unesco_oer_group_number_of_group_user|Heading for no of groups users|Users
 TEXT: mod_unesco_oer_group_join|Heading for join groups|Join group
+TEXT: mod_unesco_oer_join|Heading for join groups|Join
 TEXT: mod_unesco_oer_group_leave|Heading for join groups|Leave Group
 TEXT: mod_unesco_oer_group_legend_oerprosucts|Heading for oerproduct legend|Group adaptations
 TEXT: mod_unesco_oer_group_description_line|Message for descrption line|Please provide your description
@@ -254,6 +255,7 @@ TEXT: mod_unesco_oer_group_description_two|Heading for group description|Descrip
 TEXT: mod_unesco_oer_group_description_three|Heading for group description|Description Line 3
 TEXT: mod_unesco_oer_group_description_four|Heading for group description|Description Line 4
 TEXT: mod_unesco_oer_group_link_institution|Heading to link in to institution|Link to institution
+TEXT: mod_unesco_oer_remove_institution|Heading to link in to institution|Remove Institution
 TEXT: mod_unesco_oer_group_resorce_name|Heading resource name|Resource name
 TEXT: mod_unesco_oer_group_resorce_name_message|Resource name|Please provide your resource name
 TEXT: mod_unesco_oer_group_resorce_type|Heading for a resource type|Resource type
@@ -522,6 +524,8 @@ TEXT: mod_unesco_oer_manage_resource|Access denied|Manage OER Resource
 TEXT: mod_unesco_oer_add_resource|Access denied|Add OER Resource
 TEXT: mod_unesco_oer_latest_discussion|Access denied|Latest Discussion
 TEXT: mod_unesco_oer_discussion|Access denied| Discussion
+TEXT: mod_unesco_oer_group_discussion|Access denied|Group Discussion
+TEXT: mod_unesco_oer_add_discussion|Access denied|Add a Discussion
 TEXT: mod_unesco_oer_all_discussion|Access denied|All Discussions
 TEXT: mod_unesco_oer_resource|Access denied|OER Resource
 TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
