--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -528,6 +528,7 @@ TEXT: mod_unesco_oer_group_discussion|Access denied|Group Discussion
 TEXT: mod_unesco_oer_add_discussion|Access denied|Add a Discussion
 TEXT: mod_unesco_oer_all_discussion|Access denied|All Discussions
 TEXT: mod_unesco_oer_resource|Access denied|OER Resource
+TEXT: mod_unesco_oer_resource_add|Access denied|Add Resource
 TEXT: mod_unesco_oer_all_resource|Access denied|All OER Resources
 
 TEXT: mod_unesco_oer_select_adaptation|Adapt section heading|Select Adaptation
@@ -540,6 +541,8 @@ TEXT: mod_unesco_oer_compare_selected|compare|Compare Selected
 TEXT: mod_unesco_oer_view_product|View full product|View full product
 TEXT: mod_unesco_oer_managed_by|Managed by|Managed by
 TEXT: mod_unesco_oer_view_group|View group|View group
+TEXT: mod_unesco_oer_group_calendar|View group|View group
+TEXT: mod_unesco_oer_group_files|View group|View group
 TEXT: mod_unesco_oer_make_new_adaptation|New adaptation link|Make a new adaptation using this UNESCO Product
 TEXT: mod_unesco_oer_make_new_adaptation2|New adaptation link|Make a new adaptation using this Adaption
 TEXT: mod_unesco_oer_edit_adaptation|Edit Adaptation|Edit Adaptation
