added functionality to 4

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.171
+MODULE_VERSION: 0.172
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -595,3 +595,5 @@ TEXT: mod_unesco_oer_reporting_title3|Reporting|Output
 TEXT: mod_unesco_oer_reporting_title4|Reporting|Report Format
 TEXT: mod_unesco_oer_reporting_button|Reporting|Generate Report
 TEXT: mod_unesco_oer_reporting_button1|Reporting|Reset
+
+TEXT: mod_unesco_oer_adapted_in|Adaptations|Adapted in
