added functionality to 4

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.172
+MODULE_VERSION: 0.173
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -597,3 +597,9 @@ TEXT: mod_unesco_oer_reporting_button|Reporting|Generate Report
 TEXT: mod_unesco_oer_reporting_button1|Reporting|Reset
 
 TEXT: mod_unesco_oer_adapted_in|Adaptations|Adapted in
+
+TEXT: mod_unesco_oer_institution_adapted|Adaptations|Type of institution:
+TEXT: mod_unesco_oer_institution_adapted1|Adaptations|Country:
+TEXT: mod_unesco_oer_institution_adapted2|Adaptations|Address:
+TEXT: mod_unesco_oer_institution_adapted3|Adaptations|Institution website:
+TEXT: mod_unesco_oer_institution_adapted4|Adaptations|Keywords:
