removed hardcoded words on pages 3a,5a and 1a,1b,2a,2b

--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.173
+MODULE_VERSION: 0.174
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -459,6 +459,7 @@ TEXT: mod_unesco_oer_see_all_adaptations| adapations | See all Adaptations
 TEXT: mod_unesco_oer_rated| Rated | RATED
 TEXT: mod_unesco_oer_adapted| adapted | ADAPTED
 TEXT: mod_unesco_oer_Comments| Comments | COMMENTED
+TEXT: mod_unesco_oer_comments2| Comments | Comments
 TEXT: mod_unesco_oer_most|  | Most...
 TEXT: mod_unesco_oer_featured| featured  | Featured Unesco OER Products
 TEXT: mod_unesco_oer_featured_adaptation| featured  | Featured Adaptation
@@ -597,9 +598,17 @@ TEXT: mod_unesco_oer_reporting_button|Reporting|Generate Report
 TEXT: mod_unesco_oer_reporting_button1|Reporting|Reset
 
 TEXT: mod_unesco_oer_adapted_in|Adaptations|Adapted in
+TEXT: mod_unesco_oer_adapted_by|Adaptations|Adapted by
+TEXT: mod_unesco_oer_view_original|Adaptations|See UNSECO original
+TEXT: mod_unesco_oer_user_comments|Adaptations|User comments
+TEXT: mod_unesco_oer_product_adaptations|Product Adaptations|Product Adaptations
+TEXT: mod_unesco_oer_sections|Sections|Sections
 
 TEXT: mod_unesco_oer_institution_adapted|Adaptations|Type of institution:
 TEXT: mod_unesco_oer_institution_adapted1|Adaptations|Country:
 TEXT: mod_unesco_oer_institution_adapted2|Adaptations|Address:
 TEXT: mod_unesco_oer_institution_adapted3|Adaptations|Institution website:
 TEXT: mod_unesco_oer_institution_adapted4|Adaptations|Keywords:
+
+TEXT: mod_unesco_oer_view_institution|Product adaptation view Heading|Full information on this institution
+TEXT: mod_unesco_oer_rating|Heading for view most rated|Rating
