--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -612,3 +612,4 @@ TEXT: mod_unesco_oer_institution_adapted4|Adaptations|Keywords:
 
 TEXT: mod_unesco_oer_view_institution|Product adaptation view Heading|Full information on this institution
 TEXT: mod_unesco_oer_rating|Heading for view most rated|Rating
+TEXT: mod_unesco_oer_product_tree|Heading for view most rated|Product Tree
