--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.174
+MODULE_VERSION: 0.175
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -322,7 +322,7 @@ TEXT: mod_unesco_oer_guide|Heading for checkboxes |Guide
 TEXT: mod_unesco_oer_manual|Heading for checkboxes |Manual
 TEXT: mod_unesco_oer_best_practices|Heading for checkboxes |BestPractices
 TEXT: mod_unesco_oer_filter_all|all option in dropdown |All
-TEXT: mod_unesco_oer_search_title|all option in dropdown |title
+TEXT: mod_unesco_oer_search_title|all option in dropdown |Title
 TEXT: mod_unesco_oer_search_date|all option in dropdown |Date
 TEXT: mod_unesco_oer_search_creator|all option in dropdown |creator
 
