--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.175
+MODULE_VERSION: 0.176
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -463,7 +463,7 @@ TEXT: mod_unesco_oer_comments2| Comments | Comments
 TEXT: mod_unesco_oer_most|  | Most...
 TEXT: mod_unesco_oer_featured| featured  | Featured Unesco OER Products
 TEXT: mod_unesco_oer_featured_adaptation| featured  | Featured Adaptation
-TEXT: mod_unesco_oer_show_comment| featured  | Show Comment
+TEXT: mod_unesco_oer_show_comment| featured  | Show Comments
 TEXT: mod_unesco_oer_user_comment| featured  | User Comment:
 TEXT: mod_unesco_oer_browse_map| featured  | Browse Adaptation by Map
 TEXT: mod_unesco_oer_region|featured| Region
