--- a/unesco_oer/register.conf
+++ b/unesco_oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: UNESCO OER
 MODULE_DESCRIPTION:UNESCO OER
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.176
+MODULE_VERSION: 0.177
 MODULE_PATH: unesco_oer
 
 MENU_CATEGORY: user
@@ -614,3 +614,4 @@ TEXT: mod_unesco_oer_view_institution|Product adaptation view Heading|Full infor
 TEXT: mod_unesco_oer_rating|Heading for view most rated|Rating
 TEXT: mod_unesco_oer_product_tree|Heading for view most rated|Product Tree
 TEXT: mod_unesco_oer_no_history|Heading for view most rated|No Comments History Available
+TEXT: mod_unesco_oer_no_flash_found|No flash error|Flash is required in order to view this page
